fix : dark mode 진입 시 목차 색상 변경

--- a/src/styles/notion.css
+++ b/src/styles/notion.css
@@ -5,6 +5,7 @@
   @apply text-gray-600 dark:text-gray-300;
   overflow-wrap: break-word;
 }
+
 .notion,
 .notion-text,
 .notion-quote,
@@ -19,7 +20,6 @@
 }
 
 .notion-table-of-contents-item-body {
-  @apply dark:border-b-1;
   @apply dark:border-b-gray-200;
 }
 
